# demo_LoRAStencil

./: .gitignore  LORAStencil.md
LoRAStencil/: .gitignore  CMakeLists.txt  README.md
LoRAStencil/scripts/: local_verify.sh
LoRAStencil/src/1d/: main.cu
LoRAStencil/src/2d/: main.cu
LoRAStencil/src/3d/: main.cu
Temporal_demo/1d-jacobi-3p/: Makefile  defines.h  defines_512.h  main.c  naive_scalar.c  vectime_stride7_512.c
